--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^1.4.3",
     "react-contextmenu": "^2.14.0",
     "react-dom": "^17.0.1",
+    "react-google-charts": "^3.0.15",
     "react-multi-carousel": "^2.6.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
